--- a/index.html
+++ b/index.html
@@ -6,24 +6,19 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap-theme.css">
 		<link rel="stylesheet" type="text/css" href="css/base.css">
 		<script src = "js/jquery/jquery-1.11.0.js"></script>
- 		<script src = "js/bootstrap/bootstrap.js"></script>
-		
+ 		<script src = "js/bootstrap/bootstrap.js"></script>	
 	</head>
 	<body>
-		
-		<div class = 'row' id ='header'>
-			<div id ='inner'>
-				<div class = 'col-md-10'>
-					<h2>Omnijam</h2>
+		<div class = 'row' id = 'header'>
+			<div class = 'col-md-10'>
+				<h1>Omnijam</h1>
+			</div>
+			<div id = 'navbar'>
+				<div class = 'col-md-1'>	
+					<a href = 'about.html'>About</a>
 				</div>
-				<div id = 'navbar'>
-					<div class = 'col-md-1'>	
-						<a id = 'login' data-toggle = 'modal' data-target = '#loginModal'>Login</a>
-					</div>
-					<div class = 'col-md-1'>	
-						<a href = 'register.html'> Register</a>
-						
-					</div>
+				<div class = 'col-md-1'>	
+					<a href = 'register.html'>Register</a>
 				</div>
 			</div>
 		</div>
