modified html for header. Now we have a uniform header across all files. reformatted html for body

--- a/recordTrack.html
+++ b/recordTrack.html
@@ -14,34 +14,32 @@
  		</script>
 	</head>
 	<body>
-		<div class = 'row' id ='header'>
-			<div id ='inner'>
+		<div class = 'row' id = 'header'>
 				<div class = 'col-md-10'>
 					<h1>Omnijam</h1>
 				</div>
 				<div id = 'navbar'>
 					<div class = 'col-md-1'>	
-						<a id = 'login' data-toggle = 'modal' data-target = '#loginModal'>Login</a>
+						<a href = 'groups.html'>Username</a>
 					</div>
 					<div class = 'col-md-1'>	
-						<a href = 'register.html'> Register</a>
+						<a href = 'index.html'> Logout</a>
 					</div>
 				</div>
-				<div class = 'col-md-6'>
-					<div>
-						<h3>Respected Knights | Session 1</h3>
-					</div>
-				</div>
-			</div>
 		</div>
-		<div class='row' id = 'container'>
-			<div class = 'col-md-9' id='trackSpace'>
-				<center><h3>Drag and Drop to add track to center</h3></center>
-				<div class = "row" id = 'tracks'>
+		<div class='row' id ='subBody'><!-- everything below the header!-->
+			<div class = 'col-md-9' id='trackSpace'><!-- where track stuff happens !-->
+				<div class="row" id="sessionTitle">
+					<div class = 'col-md-6'>
+						<h3>Respected Knightz | Session 1</h3>
+					</div>
 				</div>
-				<div class ="row" id='recordSpace'>
+				<div class = "row" id = 'allTracks'><!-- Where all previously recorded tracks are!-->
+				</div>
+				<center><h3>Drag and Drop to add track to center</h3></center>
+				<div class ="row" id='newTrack'><!-- The location of where the new track section comes up !-->
 					<div class = 'col-md-12'>
-						Kaustubh
+						
 					</div>
 				</div>
 				<div class = 'row' id = 'trackControl'>
