header updated to salil's new version

--- a/group.html
+++ b/group.html
@@ -10,25 +10,19 @@
  		<script src = "js/bootstrap/bootstrap.js"></script>
 	</head>
 	<body>
-		<div class = 'row' id ='header'>
-			<div id ='inner'>
+		
+		<div class = 'row' id = 'header'>
 				<div class = 'col-md-10'>
 					<h1>Omnijam</h1>
 				</div>
 				<div id = 'navbar'>
 					<div class = 'col-md-1'>	
-						<a id = 'login' data-toggle = 'modal' data-target = '#loginModal'>Login</a>
+						<a href = 'groups.html'>Username</a>
 					</div>
 					<div class = 'col-md-1'>	
-						<a href = 'register.html'> Register</a>
+						<a href = 'index.html'> Logout</a>
 					</div>
 				</div>
-				<div class = 'col-md-6'>
-					<div>
-						<h3>Respected Knights | Session 1</h3>
-					</div>
-				</div>
-			</div>
 		</div>
 
 		<div class='row' id = 'container'>
