--- a/group.html
+++ b/group.html
@@ -12,14 +12,17 @@
 	<body>
 		
 		<div class = 'row' id = 'header'>
-				<div class = 'col-md-10'>
+				<div class = 'col-md-9'>
 					<h1>Omnijam</h1>
 				</div>
 				<div id = 'navbar'>
-					<div class = 'col-md-1'>	
+					<div class = 'col-md-1'>
 						<a href = 'groups.html'>Username</a>
 					</div>
-					<div class = 'col-md-1'>	
+					<div class = 'col-md-1'>
+						<center><a href=""><span class="glyphicon glyphicon-globe"></span></a></center>
+					</div>
+					<div class = 'col-md-1'>
 						<a href = 'index.html'> Logout</a>
 					</div>
 				</div>
