--- a/recordTrack.html
+++ b/recordTrack.html
@@ -15,14 +15,17 @@
 	</head>
 	<body>
 		<div class = 'row' id = 'header'>
-				<div class = 'col-md-10'>
+				<div class = 'col-md-9'>
 					<h1>Omnijam</h1>
 				</div>
 				<div id = 'navbar'>
-					<div class = 'col-md-1'>	
-						<a href = 'groups.html'>Username</a>
+					<div class = 'col-md-1'>
+						<a href = 'group.html'>Username</a>
 					</div>
-					<div class = 'col-md-1'>	
+					<div class = 'col-md-1'>
+						<center><a href=""><span class="glyphicon glyphicon-globe"></span></a></center>
+					</div>
+					<div class = 'col-md-1'>
 						<a href = 'index.html'> Logout</a>
 					</div>
 				</div>
