tried making notification button in navbar a dropdown, not dropping down

--- a/group.html
+++ b/group.html
@@ -20,7 +20,19 @@
 						<a href = 'groups.html'>Username</a>
 					</div>
 					<div class = 'col-md-1'>
-						<center><a href=""><span class="glyphicon glyphicon-globe"></span></a></center>
+
+						<div class="dropdown">
+						  <a data-toggle="dropdown" href="#">
+						  	<center><a href="">
+						  		<span class="glyphicon glyphicon-globe"></span>
+						  		<b class="caret"></b>
+						  	</a></center>
+						  </a>
+						  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel" id="collabDrop">
+						    <a href=""><p>Krish Suresh</p></a>
+						  </ul>
+						</div>
+
 					</div>
 					<div class = 'col-md-1'>
 						<a href = 'index.html'> Logout</a>
