--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 	</head>
 	<body>
 		<div class = 'row' id = 'header'>
-			<div class = 'col-md-10'>
-				<h1>Omnijam</h1>
+			<div class = 'col-md-9'>
+				<h1 class='logo'><a href="index.html">Omnijam</a></h1>
 			</div>
-			<div id = 'navbar'>
-				<div class = 'col-md-1'>	
-					<a href = 'about.html'>About</a>
-				</div>
-				<div class = 'col-md-1'>	
-					<a href = 'register.html'>Register</a>
-				</div>
+			<div class = 'col-md-3'>
+				<nav role="navigation">
+					<ul class ='nav navbar-nav'>
+						<li><a href='index.html' class ='navbar-link'>About</a></li>
+						<li><a href= 'register.html' class ='navbar-link'>Sign Up</a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
-
 		<div class = 'modal fade' id = 'loginModal' aria-hidden = 'true'>
 			<div class = 'modal-dialog'>
 				<div class = 'modal-content'>
