--- a/recordTrack.html
+++ b/recordTrack.html
@@ -15,20 +15,29 @@
 	</head>
 	<body>
 		<div class = 'row' id = 'header'>
-				<div class = 'col-md-9'>
-					<h1>Omnijam</h1>
-				</div>
-				<div id = 'navbar'>
-					<div class = 'col-md-1'>
-						<a href = 'group.html'>Username</a>
-					</div>
-					<div class = 'col-md-1'>
-						<center><a href=""><span class="glyphicon glyphicon-globe"></span></a></center>
-					</div>
-					<div class = 'col-md-1'>
-						<a href = 'index.html'> Logout</a>
-					</div>
-				</div>
+			<div class = 'col-md-9'>
+				<h1 class='logo'><a href="index.html">Omnijam</a></h1>
+			</div>
+			<div class = 'col-md-3'>
+				<nav role="navigation">
+					<ul class ='nav navbar-nav'>
+						<li><a href='group.html'>Username</a></li>
+						<li class = 'dropdown'>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+								<span class = 'glyphicon glyphicon-globe'></span>
+								<b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+					            <li><a>Notification 1</a></li>
+					            <li><a>Notification 2</a></li>
+					            <li><a>Notification 3</a></li>
+					            <li><a>Notification 4</a></li>
+					        </ul>
+				        </li>
+						<li><a href= 'index.html'>Logout</a></li>
+					</ul>
+				</nav>
+			</div>
 		</div>
 		<div class='row' id ='subBody'><!-- everything below the header!-->
 			<div class = 'col-md-9' id='trackSpace'><!-- where track stuff happens !-->
