Added drag and drop Support

--- a/recordTrack.html
+++ b/recordTrack.html
@@ -46,11 +46,12 @@
 					<hr>
 				</div>
 				<div class = "row col-md-12" id = 'allTracks'><!-- Where all previously recorded tracks are!-->
+					<center><h3>Drag and Drop to add track to center</h3></center>
 				</div>
-				<center><h3>Drag and Drop to add track to center</h3></center>
+
 				<div class ='row col-md-12' id ='bottomHalf'>
 					<hr>
-					<div class ="row" id='newTrack'><!-- The location of where the new track section comes up !-->
+					<div class ="row" id='newTrack' draggable="true"><!-- The location of where the new track section comes up !-->
 						<div class = 'col-md-12'>
 							<h2>hi there</h2>
 						</div>
