Redid the header sizing colors and added the new logo plus some alignment things

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	</head>
 	<body>
 		<div class = 'row' id = 'header'>
-			<div class = 'col-md-9'>
-				<h1 class='logo'><a href="index.html">Omnijam</a></h1>
+			<div class = 'col-md-2 logo'>
+				<a href="index.html"><img src = 'assets/icons/logoWhite.png'/></a>
 			</div>
+			<div class ='col-md-7'></div>
 			<div class = 'col-md-3'>
 				<nav role="navigation">
 					<ul class ='nav navbar-nav'>
