--- a/group.html
+++ b/group.html
@@ -6,15 +6,20 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap/bootstrap-theme.css">
 		<link rel="stylesheet" type="text/css" href="css/base.css">
 		<link rel = 'stylesheet' type = 'text/css' href = "css/group.css">
+		<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 		<script src = "js/jquery/jquery-1.11.0.js"></script>
  		<script src = "js/bootstrap/bootstrap.js"></script>
 	</head>
 	<body>
 		
 		<div class = 'row' id = 'header'>
-			<div class = 'col-md-9'>
-				<h1 class='logo'><a href="index.html">Omnijam</a></h1>
+			<!--div class = 'col-md-9'>
+				<h1 class='logo'><a href="index.html"><img src = 'assets/icons/logo.png'/></a></h1>
+			</div-->
+			<div class = 'logo col-md-2'>
+				<a href="index.html"><img src = 'assets/icons/logoWhite.png'/></a>
 			</div>
+			<div class ='col-md-7'></div>
 			<div class = 'col-md-3'>
 				<nav role="navigation">
 					<ul class ='nav navbar-nav'>
@@ -36,11 +41,11 @@
 				</nav>
 			</div>
 		</div>
-		<div class='row' id = 'container'>
+		<div class='row container'>
 			<div class = 'col-md-2' id = 'groups'>
 				<div class="row padGrp" style="padding-top:15px;">
 					<!-- Create group button trigger modal -->
-					<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#groupModal">
+					<button class="btn btn-custom btn-md" data-toggle="modal" data-target="#groupModal">
 	  					Create group
 					</button>
 				</div>
@@ -55,7 +60,7 @@
 				<!-- figure out how to make this all in one row...also look at recordTrack to see what is in div rows -->
 				<div class="row padSesh">
 					<div class="inline"><h1>Respected Knightz</h1></div>
-					<div class="dropdown inline" style="padding-top:30px; padding-right:100px; float:right;">
+					<div class="dropdown inline" id='collaborators'>
 					  <a data-toggle="dropdown" href="#">
 					  	Collaborators 
 					  	<b class="caret"></b>
@@ -71,7 +76,7 @@
 				<div class="row padSesh">
 					<!-- margin-top to align hr with hr in groups div -->
 					<hr style="margin-top:7px;"></hr>
-					<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#sessionModal">
+					<button class="btn btn-custom btn-md" data-toggle="modal" data-target="#sessionModal">
 	  					Create session
 					</button>
 					<a href="recordTrack.html"><h3>Session 1</h3></a>
