Where is the home page??

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 				</nav>
 			</div>
 		</div>
+		<div>
+			<img src="https://i.imgflip.com/775cl.jpg" title="made at imgflip.com"/>
+		</div>
 		<div class = 'modal fade' id = 'loginModal' aria-hidden = 'true'>
 			<div class = 'modal-dialog'>
 				<div class = 'modal-content'>
