--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 		<div>
-			<img src="https://i.imgflip.com/775cl.jpg" title="made at imgflip.com"/>
+			In Progress
 		</div>
 		<div class = 'modal fade' id = 'loginModal' aria-hidden = 'true'>
 			<div class = 'modal-dialog'>
