--- a/group.html
+++ b/group.html
@@ -17,7 +17,7 @@
 				<h1 class='logo'><a href="index.html"><img src = 'assets/icons/logo.png'/></a></h1>
 			</div-->
 			<div class = 'logo col-md-2'>
-				<a href="index.html"><img src = 'assets/icons/logoWhite.png'/></a>
+				<a href="index.html"><img src = 'assets/icons/logo4.png'/></a>
 			</div>
 			<div class ='col-md-7'></div>
 			<div class = 'col-md-3'>
@@ -76,13 +76,16 @@
 				<div class="row padSesh">
 					<!-- margin-top to align hr with hr in groups div -->
 					<hr style="margin-top:7px;"></hr>
+					<div class="col-md-3">
 					<button class="btn btn-custom btn-md" data-toggle="modal" data-target="#sessionModal">
 	  					Create session
 					</button>
-					<a href="recordTrack.html"><h3>Session 1</h3></a>
-					<a href=""><h3>Session 2</h3></a>
-					<a href=""><h3>Session 3</h3></a>
-					<a href=""><h3>Session 4</h3></a>
+					
+						<a href="recordTrack.html"><h3>Session 1</h3></a>
+						<a href=""><h3>Session 2</h3></a>
+						<a href=""><h3>Session 3</h3></a>
+						<a href=""><h3>Session 4</h3></a>
+					</div>
 				</div>
 			</div>
 
