--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class = 'row' id = 'header'>
 			<div class = 'col-md-2 logo'>
-				<a href="index.html"><img src = 'assets/icons/logoWhite.png'/></a>
+				<a href="index.html"><img src = 'assets/icons/logo4.png'/></a>
 			</div>
 			<div class ='col-md-7'></div>
 			<div class = 'col-md-3'>
