--- a/recordTrack.html
+++ b/recordTrack.html
@@ -19,7 +19,7 @@
 				<h1 class='logo'><a href="index.html"><img src = 'assets/icons/logo.png'/></a></h1>
 			</div-->
 			<div class = 'col-md-2 logo'>
-				<a href="index.html"><img src = 'assets/icons/logoWhite.png'/></a>
+				<a href="index.html"><img src = 'assets/icons/logo4.png'/></a>
 			</div>
 			<div class ='col-md-7'></div>
 			<div class = 'col-md-3'>
@@ -54,7 +54,7 @@
 				</div>
 
 				<div class ='row col-md-12' id ='bottomHalf'>
-					<hr>
+
 					<div class ="row" id='newTrack' draggable="true"><!-- The location of where the new track section comes up !-->
 						<div class = 'col-md-12'>
 							<h2>hi there</h2>
@@ -62,19 +62,17 @@
 					</div>
 				
 					<div class = 'row' id = 'trackControl'>
+						<hr>
 						<div class = 'col-md-4'>
-							<!--input type = 'image' src = 'assets/icons/Add-icon.png' alt ='add/record' id ="addTrack"/-->
 							<span id ='addTrack' class = 'glyphicon glyphicon-plus'></span>
 							<span id='record' class='glyphicon glyphicon-record'></span>
 							<span id='stop' class='glyphicon glyphicon-stop'></span>
 						</div>
 						<div class = 'col-md-4'>
-							<!--input type = 'image' src = 'assets/icons/play_button.png' alt ='Play'/-->
 							<span id ='play' class = 'glyphicon glyphicon-play'></span>
 							<span id ='pause' class = 'glyphicon glyphicon-pause'></span>
 						</div>
 						<div class = 'col-md-4'>
-							<!--input type = 'image' src = 'assets/icons/Garbage_bin_icon.png' alt ='Trash'/-->
 							<span class = 'glyphicon glyphicon-trash'></span>
 						</div>
 					</div>
@@ -82,7 +80,11 @@
 				
 			</div>
 			<div class = 'col-md-3' id = 'chatBox'>
-				<center>Chat Box is here</center>
+				<div class = 'row col-md-12' id="#chatText">
+				</div>
+				<div class ='row col-md-12' id='#chatInput'>
+					<textarea></textarea>
+				</div>
 			</div>
 		</div>
 	</body>
