Added a Group title on top of the groups column and expanded column size to col-md-3

--- a/group.html
+++ b/group.html
@@ -42,21 +42,25 @@
 			</div>
 		</div>
 		<div class='row container'>
-			<div class = 'col-md-2' id = 'groups'>
-				<div class="row padGrp" style="padding-top:15px;">
+			<div class = 'col-md-3' id = 'groups'>
+				<div class='row padGrp'>
+					<h1>Groups</h1>
+				</div>
+				<div class="row padGrp">
+					<hr style='width:80%; float:left;'>
 					<!-- Create group button trigger modal -->
 					<button class="btn btn-custom btn-md" data-toggle="modal" data-target="#groupModal">
 	  					Create group
 					</button>
 				</div>
 				<div class="row padGrp">
-					<a href=""><h3>Respected Knightz</h3></a>
+					<a href="" ><h3 class='active'>Respected Knightz</h3></a>
 					<a href=""><h3>Group 2</h3></a>
 					<a href=""><h3>Group 3</h3></a>
 					<a href=""><h3>Group 4</h3></a>
 				</div>
 			</div>
-			<div class = 'col-md-10' id='sessions'>
+			<div class = 'col-md-9' id='sessions'>
 				<!-- figure out how to make this all in one row...also look at recordTrack to see what is in div rows -->
 				<div class="row padSesh">
 					<div class="inline"><h1>Respected Knightz</h1></div>
@@ -75,11 +79,11 @@
 				</div>
 				<div class="row padSesh">
 					<!-- margin-top to align hr with hr in groups div -->
-					<hr style="margin-top:7px;"></hr>
-					<div class="col-md-3">
-					<button class="btn btn-custom btn-md" data-toggle="modal" data-target="#sessionModal">
-	  					Create session
-					</button>
+					<hr></hr>
+					<div class="col-md-3" style="padding-left:0%;">
+						<button class="btn btn-custom btn-md" data-toggle="modal" data-target="#sessionModal">
+		  					Create session
+						</button>
 					
 						<a href="recordTrack.html"><h3>Session 1</h3></a>
 						<a href=""><h3>Session 2</h3></a>
