Changed the notifications dropdown

--- a/recordTrack.html
+++ b/recordTrack.html
@@ -17,9 +17,6 @@
 	</head>
 	<body>
 		<div class = 'row' id = 'header'>
-			<!--div class = 'col-md-9'>
-				<h1 class='logo'><a href="index.html"><img src = 'assets/icons/logo.png'/></a></h1>
-			</div-->
 			<div class = 'col-md-2 logo'>
 				<a href="index.html"><img src = 'assets/icons/logo4.png'/></a>
 			</div>
@@ -33,11 +30,11 @@
 								<span class = 'glyphicon glyphicon-globe'></span>
 								<b class="caret"></b>
 							</a>
-							<ul class="dropdown-menu">
-					            <li><a>Notification 1</a></li>
-					            <li><a>Notification 2</a></li>
-					            <li><a>Notification 3</a></li>
-					            <li><a>Notification 4</a></li>
+							<ul class="dropdown-menu" role='menu'>
+								<a href=""><p> Notification 1</p></a>
+							    <a href=""><p> Notification 2</p></a>
+							    <a href=""><p> Notification 3</p></a>
+							    <a href=""><p> Notification 4</p></a>
 					        </ul>
 				        </li>
 						<li><a href= 'index.html'>Logout</a></li>
