--- a/group.html
+++ b/group.html
@@ -29,12 +29,18 @@
 								<span class = 'glyphicon glyphicon-globe'></span>
 								<b class="caret"></b>
 							</a>
-							<ul class="dropdown-menu">
-					            <li><a>Notification 1</a></li>
+							<!--ul class="dropdown-menu">
+					            <li><a h>Notification 1</a></li>
 					            <li><a>Notification 2</a></li>
 					            <li><a>Notification 3</a></li>
 					            <li><a>Notification 4</a></li>
-					        </ul>
+					        </ul-->
+					        <ul class="dropdown-menu">
+							    <a href=""><p> Notification 1</p></a>
+							    <a href=""><p> Notification 2</p></a>
+							    <a href=""><p> Notification 3</p></a>
+							    <a href=""><p> Notification 4</p></a>
+					  		</ul>
 				        </li>
 						<li><a href= 'index.html'>Logout</a></li>
 					</ul>
