Added stuff to track div, like waveform div, checkbox and text. Also adjusted the alignment

--- a/recordTrack.html
+++ b/recordTrack.html
@@ -52,11 +52,14 @@
 					<center><h3>Drag and Drop to add track to center</h3></center>
 				</div>
 
-				<div class ='row col-md-12' id ='bottomHalf'>
+				<div class ='col-md-12' id ='bottomHalf'>
 
-					<div class ="row" id='newTrack' draggable="true"><!-- The location of where the new track section comes up !-->
+					<div class ="col-md-12" id='newTrack' draggable="true"><!-- The location of where the new track section comes up !-->
 						<div class = 'col-md-12'>
-							<h2>hi there</h2>
+								<input type="checkbox" name="newTrackCheckBox" value="selected">
+								Artist - <b> Song </b>
+								<div class="waveform">
+								</div>
 						</div>
 					</div>
 				
