About page stuff

--- a/about.html
+++ b/about.html
@@ -19,13 +19,30 @@
 				<nav role="navigation">
 					<ul class ='nav navbar-nav'>
 						<li><a href='about.html' class ='navbar-link'>About</a></li>
-						<li><a href= '' class ='navbar-link' data-toggle="modal" data-target="#loginModal">Login</a></li>
+						<li><a href= '' data-toggle="modal" data-target="#loginModal" class ='navbar-link'>Login</a></li>
 					</ul>
 				</nav>
 			</div>
 		</div>
-		<div>
-			In Progress
+		<div class ='image-container'>
+			<div id='team' class='col-md-12' style="text-align:center; margin-top:10%;">
+				<div class='col-md-3'>
+					<img src='assets/icons/person_placeholder.png' />
+					<h3>Aashish Chalasani</h3>
+				</div>
+				<div class='col-md-3'>
+					<img src='assets/icons/person_placeholder.png' />
+					<h3>Kaustubh Garimella</h3>
+				</div>
+				<div class='col-md-3'>
+					<img src='assets/icons/person_placeholder.png' />
+					<h3>Salil Gupta</h3>
+				</div>
+				<div class='col-md-3'>
+					<img src='assets/icons/person_placeholder.png' />
+					<h3>Krish Suresh</h3>
+				</div>
+			</div>
 		</div>
 		<div class = 'modal fade' id = 'loginModal' aria-hidden = 'true'>
 			<div class = 'modal-dialog'>
