--- a/index.html
+++ b/index.html
@@ -24,8 +24,39 @@
 				</nav>
 			</div>
 		</div>
-		<div>
-			In Progress
+		<div id ='backgroundImg'>
+			<div id = 'backgroundSection'>
+				<div id = 'backgroundHeader'>
+					<div class = 'row' id = 'backgroundContent'>
+						<div class = 'col-md-6' id = 'backgroundText'>
+							<h1>
+								Online collaboration made easy.
+							</h1>
+							<h4 class = 'backgroundTextLine'>
+								OminJam allows you to create music with your group on any device at any time.
+							</h4>
+							<h4 class = 'backgroundTextLine'>
+								Sign up and start jamming now.
+							</h4>
+						</div>
+						<div class = 'col-md-6' id = 'formContainer'>
+							<form role="form">
+	 							<div class="form-group">
+	    							<input type="Name" class="form-control" id="name" placeholder="Your Name">
+	    						</div>
+	    						<div class = 'form-group'>
+	    							<input type="email" class="form-control" id="email" placeholder="Your Email">
+	  							</div>
+	  							<div class="form-group">
+	    							<input type="password" class="form-control" id="password" placeholder="New Password">
+	 						 	</div>
+	 						 	<button type="button" class = 'btn btn-success btn-lg btn-block btn-custom'>Sign Up</button>
+	 						</form>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 		</div>
 		<div class = 'modal fade' id = 'loginModal' aria-hidden = 'true'>
 			<div class = 'modal-dialog'>
