fixed homepage spelling error

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								Online collaboration made easy.
 							</h1>
 							<h4 class = 'backgroundTextLine'>
-								OminJam allows you to create music with your group on any device at any time.
+								OmniJam allows you to create music with your group on any device at any time.
 							</h4>
 							<h4 class = 'backgroundTextLine'>
 								Sign up and start jamming now.
