--- a/recordTrack.html
+++ b/recordTrack.html
@@ -55,7 +55,7 @@
 				</div>
 
 				<div class ="col-md-12" id='newTrack' draggable="true"><!-- The location of where the new track section comes up !-->
-					<div class = 'col-md-12' style='height: 100%'>
+					<div class = 'col-md-12' id="newTrackBox">
 						<input type="checkbox" name="newTrackCheckBox" value="selected">
 						Username - <b> Track Name </b>
 						<div class="waveform">
