--- a/recordTrack.html
+++ b/recordTrack.html
@@ -56,7 +56,7 @@
 
 				<div class ="col-md-12" id='newTrack' draggable="true"><!-- The location of where the new track section comes up !-->
 					<div class = 'col-md-12' id="newTrackBox">
-						<input type="checkbox" name="newTrackCheckBox" value="selected">
+						<input type="checkbox" name="newTrackCheckBox" value="newTrack">
 						Username - <b> Track Name </b>
 						<div class="waveform">
 							<img src = 'assets/sample_waveform.png'/>
