Added timer to top of screen so that play tracks is visible

--- a/recordTrack.html
+++ b/recordTrack.html
@@ -49,6 +49,7 @@
 					<hr>
 				</div>
 				<div class = "row col-md-12" id = 'allTracks'><!-- Where all previously recorded tracks are!-->
+					<center><h3 id='time'>0 seconds</center></h3>
 					<div style='background-color: #fafafa; height:100%'>
 						<center><h3>Drag and Drop to add track to center</h3></center>
 					</div>
