minor changes to modals

--- a/group.html
+++ b/group.html
@@ -138,10 +138,10 @@
 					    <label for="sessionName">Session name</label>
 					    <input type="text" class="form-control" id="sessionName" placeholder="Enter session name">
 					  </div>
-					  <div class="form-group">
+					  <!--div class="form-group">
 					    <label for="bpm">BPM</label>
 					    <input type="text" class="form-control" id="bpm" placeholder="Enter beats per minute">
-					  </div>
+					  </div-->
 					  <button type="submit" class="btn btn-default">Create</button>
 					</form>
 			      </div>
