--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						    <input type="password" class="form-control" id="password" placeholder="Password">
 						</div>
 						<div class = 'form-group'>
-							<button type="button" class="btn btn-custom">Login</button>
+							<a class = 'btn btn-custom' href ='group.html'>Login</a>
 						</div>
 			      	</form>
 			      </div>
